# laMEG

./: .buildinfo  .mailmap  .pylintrc  CODE_OF_CONDUCT.md  README.md  README.rst  convert_legacy_surfaces.py  csurf.pyx  dev_requirements.txt  freesurfer_installation.html  freesurfer_instructions.md  genindex.html  index.html  install.py  installation.html  invert.py  invert_ebb.m  invert_msp.m  lameg.html  laminar.py  load_source_time_series.m  modules.html  objects.inv  plot.py  postprocess_freesurfer_surfaces.ipynb  postprocess_freesurfer_surfaces.ipynb.REMOVED.git-id  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  settings.json  setup.py  sim_csd.ipynb  sim_model_comparison.ipynb  sim_model_comparison_cv_error.ipynb  sim_model_comparison_free_energy.ipynb  sim_roi_analysis.ipynb  sim_sliding_win_model_comparison.ipynb  sim_sliding_win_model_comparison_burst.ipynb  (+10 more)
.doctrees/: environment.pickle  freesurfer_installation.doctree  index.doctree  installation.doctree  windows_installation.doctree
_autosummary/: lameg.invert.html  lameg.laminar.html  lameg.simulate.html  lameg.surf.html  lameg.viz.html
_modules/: index.html
_source/: lameg.html  modules.html
_sources/: index.rst.txt  lameg.rst.txt  windows_installation.rst.txt
_static/: documentation_options.js
auto_tutorials/: config.html  index.html  tutorial_01_surface_processing.html  tutorial_02_model_comparison_free_energy.html  tutorial_03_model_comparison_cv_error.html  tutorial_04_sliding_win_model_comparison.html  tutorial_05_roi_power_analysis.html  (+4 more)
doc/: conf.py
(+206 files in other folders)
